objects/icBase__Solution2__c.object
<CustomObject>
    <description>Solutions to Objectives</description>
    <fields>
        <fullName>Cost_Term__c</fullName>
        <label>Cost Term</label>
        <picklist>
            <picklistValues>
                <fullName>Per User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>icBase__Description__c</fullName>
        <inlineHelpText>A solution is a way of delivering an objective through configuration, development or apps from the AppExchange.</inlineHelpText>
        <label>Solution Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>icBase__Limitations__c</fullName>
        <inlineHelpText>Any limitations of the solution</inlineHelpText>
        <label>Limitations</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>icBase__Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The objective that is related to this solution</inlineHelpText>
        <label>Related Objective</label>
        <referenceTo>icBase__Objective__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>icBase__Performed_by__c</fullName>
        <inlineHelpText>Who should implement this solution</inlineHelpText>
        <label>To be performed by</label>
        <picklist>
            <picklistValues>
                <fullName>Professional Services Partner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Our administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Professional Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>icBase__Project__c</fullName>
        <label>Project</label>
        <referenceTo>icBase__Project2__c</referenceTo>
        <relationshipName>Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>icBase__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Possible</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Discussions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SELECTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Solution</label>
    <nameField>
        <label>Solution Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>